add publish web app

--- a/.github/workflows/api-build-push.yml
+++ b/.github/workflows/api-build-push.yml
@@ -34,4 +34,10 @@ jobs:
                 tags: |
                     ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
                     ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:latest
-
+            
+            - name: Deploy to Azure Web App
+              uses: azure/webapps-deploy@v3
+              with:
+                app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+                images: ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+                publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
